[gd_scene load_steps=9 format=3 uid="uid://be5v5v16gpv85"]

[ext_resource type="Script" path="res://villain.gd" id="1_2yfyb"]
[ext_resource type="Texture2D" uid="uid://tuajty28vatt" path="res://Mini Pixel Pack 3/Enemies/Alan (16 x 16).png" id="1_c0ufr"]
[ext_resource type="Texture2D" uid="uid://bh0qcx3she4nj" path="res://Mini Pixel Pack 3/Effects/Sparkle (16 x 16).png" id="3_22wkq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpjev"]
size = Vector2(14, 13)

[sub_resource type="Animation" id="Animation_s13jp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_c0ufr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_taxg2"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_22wkq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_55fnk"]
resource_name = "normalcy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_c0ufr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0xy6t"]
_data = {
"RESET": SubResource("Animation_s13jp"),
"death": SubResource("Animation_taxg2"),
"normalcy": SubResource("Animation_55fnk")
}

[node name="Villain" type="Area2D" groups=["villains"]]
script = ExtResource("1_2yfyb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_c0ufr")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_hpjev")

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootingTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "normalcy"
libraries = {
"": SubResource("AnimationLibrary_0xy6t")
}

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
